# Sonar_Nucleo

./: .clang-format  .gitignore  .mxproject  CMakeLists.txt  CMakePresets.json  Dockerfile  Nucleo.jdebug  README.md  gcc-arm-none-eabi.cmake  makefile  nucle-g474-example.ioc  sonar_nucleo.ioc  sonar_nucleo.jdebug
.devcontainer/: devcontainer.json
Core/Inc/: RTE_Components.h  main.h  posted_signals.h  private_signal_ranges.h  pubsub_signals.h  stm32g4xx_hal_conf.h  stm32g4xx_it.h
Core/Src/: interrupts.c  main.c  safe_strncpy.c  safe_strncpy.h  stm32g4xx_hal_msp.c  stm32g4xx_it.c
Core/bsp/: bsp.c  bsp.h  bsp_backup_ram.c  bsp_manual.c  bsp_manual.h  gpio_stm32.c  gpio_stm32.h  uart.c  uart_mpu_specific.c  uart_mpu_specific.h
Core/bsp/interfaces/: gpio.h  serial_interface.h  uart.h
Core/services/: blinky.c  blinky.h  director.c  director.h  fault_manager.c  fault_manager.h  halt_if_debugging.h  reset.c  reset.h  reset_reason_print.c  reset_reason_print.h
Core/services/cli/: cli.c  cli.h  cli_commands.c  cli_commands.h  cli_manual_commands.c  cli_manual_commands.h
Core/services/pc_com/: crc16.c  crc16.h  hdlc.c  hdlc.h  pc_com.c  pc_com.h
messages/: CMakeLists.txt  build.sh  fetch_nanopb.cmake
messages/src/: AddToBodePlot.options  AddToBodePlot.proto  AddXYToPlot.options  AddXYToPlot.proto  CLIData.options  CLIData.proto  CMakeLists.txt  ClearPlots.proto  ConfigPlot.options  ConfigPlot.proto  DrawBodePlot.options  DrawBodePlot.proto  DrawPlot.options  DrawPlot.proto  LogPrint.options  LogPrint.proto  LogToPlot.options  LogToPlot.proto  MessageType.proto
pc_com/: GUIRebuild.bat  README.md  com_controller.py  com_thread.py  crc.py  hdlc.py  main_window.py  main_window.ui  packets.py  pc_com.bat  pc_com.py  plot_manager.py  requirements.txt  terminal.py
pc_com/messages/: AddToBodePlot_pb2.py  AddXYToPlot_pb2.py  CLIData_pb2.py  ClearPlots_pb2.py  ConfigPlot_pb2.py  DrawBodePlot_pb2.py  DrawPlot_pb2.py  LogPrint_pb2.py  LogToPlot_pb2.py  MessageType_pb2.py
